<resources>
    <string name="app_name">Assignment Scheduler</string>
    <string name="create_new_assignment">Create New Assignment</string>
    <string name="name">Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="type">Type:</string>
    <string name="length">Length:</string>
    <string name="explanation">Explanation:</string>
    <string name="save">Save</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="assignment_due_date">Assignment Due Date</string>
    <string name="time_left">Time Left</string>
    <string name="scheduler">Scheduler</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string-array name="type_text">
        <item>None</item>
        <item>Homework</item>
        <item>Essay</item>
        <item>Project</item>
        <item>Exam</item>
    </string-array>
    <string-array name="length_text">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
        <item>Extra Long</item>
    </string-array>
</resources>