<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_new_assignment"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/explainText"
        android:layout_width="84dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/explanation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengthEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditText"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startEditText"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startEditField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/calendar_blank" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lengthEditText"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/endEditText"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/endEditField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/calendar_blank" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeEditText"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endEditText">

        <AutoCompleteTextView
            android:id="@+id/typeEditField"
            android:hint="@string/type"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lengthEditText"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/length"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeEditText">

        <AutoCompleteTextView
            android:id="@+id/lengthEditDrop"
            android:hint="@string/length"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:drawableTop="@drawable/check_bold"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>