<?xml version="1.0" encoding="utf-8"?><!--XML implementation of Card Layout-->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="402dp"
        android:layout_height="66dp"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/assignmentName"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:padding="5dp"
            android:text="@string/assignment_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assignmentDue"
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:padding="5dp"
            android:text="@string/assignment_due_date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assignmentName" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="71dp"
            android:layout_height="23dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="96dp"
            android:layout_marginTop="4dp"
            android:text="@string/time_left"
            app:layout_constraintStart_toEndOf="@+id/assignmentName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typeText"
            android:layout_width="69dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="1dp"
            android:text="@string/type"
            app:layout_constraintStart_toEndOf="@+id/assignmentDue"
            app:layout_constraintTop_toBottomOf="@+id/timeText" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="380dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            android:max="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
